--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,33 @@
 astroid==2.15.1
 attrs==22.2.0
+contourpy==1.0.7
 coverage==7.2.2
+cycler==0.11.0
 dill==0.3.6
 flake8==6.0.0
+fonttools==4.39.4
 iniconfig==2.0.0
 isort==5.12.0
+kiwisolver==1.4.4
 lazy-object-proxy==1.9.0
+matplotlib==3.7.1
 mccabe==0.7.0
 mypy==1.1.1
 mypy-extensions==1.0.0
 networkx==3.0
+numpy==1.24.3
 packaging==23.0
+Pillow==9.5.0
 platformdirs==3.2.0
 pluggy==1.0.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pylint==2.17.1
+pyparsing==3.0.9
 pytest==7.2.2
 pytest-cov==4.0.0
+python-dateutil==2.8.2
+six==1.16.0
 tomlkit==0.11.7
 typing_extensions==4.5.0
 wrapt==1.15.0
